--- a/.github/workflows/features-and-predictions.yml
+++ b/.github/workflows/features-and-predictions.yml
@@ -24,7 +24,7 @@ jobs:
           
       - name: execute python workflows from bash script
         env: 
-          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+          HOPSWORKS_API_KEY: ${{ secrets.SERVERLESS_ML_COURSE }}
         run: ./src/01-module/scripts/run-feature-and-prediction-pipelines.sh
 
       - name: publish github pages
