--- a/.github/workflows/fraud-feature-pipelines.yml
+++ b/.github/workflows/fraud-feature-pipelines.yml
@@ -24,5 +24,5 @@ jobs:
           
       - name: execute python workflows from bash script
         env: 
-          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+          HOPSWORKS_API_KEY: ${{ secrets.GIT_SERVERLESS_ML_COURSE }}
         run: ./src/02-module/scripts/run-fraud-feature-pipelines.sh
